lang.output
Terminais sem uso na gramática

    T_Func
    T_OpenCloseParen
    T_Quote
    T_Dot
    T_BackSlash
    T_UnderScore
    T_Percent
    T_ComercialAND
    T_Return
    T_Biblioteca


Regras inúteis no analisador por causa de conflitos

    9 $@3: %empty


Estado 4 conflitos: 1 de redução/redução
Estado 83 conflitos: 1 de redução/redução
Estado 113 conflitos: 1 de redução/redução
Estado 137 conflitos: 1 de redução/redução
Estado 138 conflitos: 1 de redução/redução
Estado 139 conflitos: 1 de redução/redução
Estado 157 conflitos: 1 de redução/redução
Estado 165 conflitos: 1 de redução/redução
Estado 168 conflitos: 1 de redução/redução


Gramática

    0 $accept: program $end

    1 $@1: %empty

    2 program: $@1 lines

    3 lines: lines line
    4      | %empty

    5 line: T_EndLine
    6     | variable_declaration T_DotComma

    7 $@2: %empty

    8 line: $@2 attribution T_DotComma

    9 $@3: %empty

   10 line: $@3 function_usage T_DotComma

   11 $@4: %empty

   12 line: $@4 logical_structure

   13 $@5: %empty

   14 line: $@5 import T_DotComma

   15 $@6: %empty

   16 line: $@6 T_Comment

   17 import: T_Import T_Identificador

   18 $@7: %empty

   19 variable_declaration: $@7 T_Let T_Identificador T_Equals variable

   20 $@8: %empty

   21 variable_declaration: $@8 T_Const T_Identificador T_Equals variable

   22 attribution: T_Identificador attribution_right

   23 attribution_right: T_Equals variable
   24                  | T_Plus T_Equals variable
   25                  | T_Minus T_Equals variable
   26                  | T_Divide T_Equals variable
   27                  | T_Times T_Equals variable
   28                  | T_Plus T_Plus
   29                  | T_Minus T_Minus

   30 function_usage: T_Identificador T_OpenParen optional_params T_CloseParen

   31 logical_structure: structure_for
   32                  | structure_while
   33                  | structure_do T_DotComma
   34                  | structure_if structure_else
   35                  | structure_switch

   36 structure_for: T_For T_OpenSquareBracket T_Identificador T_doubleDot T_OpenParen type T_Comma type T_Comma type T_CloseParen T_CloseSquareBracket T_OpenBracket lines T_CloseBracket

   37 structure_if: T_If T_OpenSquareBracket logical_expression T_CloseSquareBracket T_OpenBracket lines T_CloseBracket

   38 structure_else: T_Else T_OpenBracket lines T_CloseBracket
   39               | %empty

   40 structure_switch: T_Switch T_OpenSquareBracket T_Identificador T_CloseSquareBracket T_OpenBracket structure_cases structure_default T_CloseBracket

   41 structure_cases: structure_cases structure_case
   42                | %empty

   43 structure_case: T_Case T_OpenSquareBracket type T_CloseSquareBracket T_OpenBracket lines T_CloseBracket T_EndLine
   44               | line

   45 structure_default: T_Default T_OpenBracket lines T_CloseBracket T_EndLine

   46 structure_while: T_While T_OpenSquareBracket logical_expression T_CloseSquareBracket T_OpenBracket lines T_CloseBracket

   47 structure_do: T_Do T_OpenBracket lines T_CloseBracket T_While T_OpenSquareBracket logical_expression T_CloseSquareBracket

   48 logical_expression: expression T_EqualsEQ expression
   49                   | expression T_NegativeEquals expression
   50                   | expression T_BiggerThan expression
   51                   | expression T_SmallerThan expression
   52                   | expression T_BiggerThanEQ expression
   53                   | expression T_SmallerThanEQ expression
   54                   | expression T_Or expression
   55                   | expression T_And expression
   56                   | T_Not expression

   57 variable: T_String
   58         | expression
   59         | function_usage

   60 expression: type
   61           | expression T_Plus expression
   62           | expression T_Minus expression
   63           | expression T_Times expression
   64           | expression T_Divide expression
   65           | T_Minus expression
   66           | expression T_Power expression
   67           | T_OpenParen expression T_CloseParen

   68 type: T_IntValue
   69     | T_FloatValue
   70     | T_Identificador

   71 optional_params: T_String
   72                | T_Identificador
   73                | %empty


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    T_Let (258) 19
    T_Import (259) 17
    T_Func (260)
    T_OpenParen (261) 30 36 67
    T_CloseParen (262) 30 36 67
    T_OpenCloseParen (263)
    T_OpenBracket (264) 36 37 38 40 43 45 46 47
    T_CloseBracket (265) 36 37 38 40 43 45 46 47
    T_Comma (266) 36
    T_Quote (267)
    T_DotComma (268) 6 8 10 14 33
    T_doubleDot (269) 36
    T_Dot (270)
    T_For (271) 36
    T_If (272) 37
    T_While (273) 46 47
    T_Else (274) 38
    T_Switch (275) 40
    T_Case (276) 43
    T_Default (277) 45
    T_Do (278) 47
    T_OpenSquareBracket (279) 36 37 40 43 46 47
    T_BackSlash (280)
    T_CloseSquareBracket (281) 36 37 40 43 46 47
    T_Equals (282) 19 21 23 24 25 26 27
    T_UnderScore (283)
    T_Percent (284)
    T_ComercialAND (285)
    T_Return (286)
    T_Const (287) 21
    T_EndLine (288) 5 43 45
    T_Comment (289) 16
    T_Not (290) 56
    T_EqualsEQ (291) 48
    T_NegativeEquals (292) 49
    T_Or (293) 54
    T_And (294) 55
    T_SmallerThan (295) 51
    T_SmallerThanEQ (296) 53
    T_BiggerThan (297) 50
    T_BiggerThanEQ (298) 52
    T_IntValue <ival> (299) 68
    T_FloatValue <fval> (300) 69
    T_String <sval> (301) 57 71
    T_Biblioteca <sval> (302)
    T_Identificador <sval> (303) 17 19 21 22 30 36 40 70 72
    T_Minus (304) 25 29 62 65
    T_Plus (305) 24 28 61
    T_Divide (306) 26 64
    T_Times (307) 27 63
    T_Negative (308)
    T_Power (309) 66


Não terminais com as regras onde eles aparecem

    $accept (55)
        à esquerda: 0
    program (56)
        à esquerda: 2
        à direita: 0
    $@1 (57)
        à esquerda: 1
        à direita: 2
    lines (58)
        à esquerda: 3 4
        à direita: 2 3 36 37 38 43 45 46 47
    line (59)
        à esquerda: 5 6 8 10 12 14 16
        à direita: 3 44
    $@2 (60)
        à esquerda: 7
        à direita: 8
    $@3 (61)
        à esquerda: 9
        à direita: 10
    $@4 (62)
        à esquerda: 11
        à direita: 12
    $@5 (63)
        à esquerda: 13
        à direita: 14
    $@6 (64)
        à esquerda: 15
        à direita: 16
    import (65)
        à esquerda: 17
        à direita: 14
    variable_declaration (66)
        à esquerda: 19 21
        à direita: 6
    $@7 (67)
        à esquerda: 18
        à direita: 19
    $@8 (68)
        à esquerda: 20
        à direita: 21
    attribution (69)
        à esquerda: 22
        à direita: 8
    attribution_right (70)
        à esquerda: 23 24 25 26 27 28 29
        à direita: 22
    function_usage (71)
        à esquerda: 30
        à direita: 10 59
    logical_structure (72)
        à esquerda: 31 32 33 34 35
        à direita: 12
    structure_for (73)
        à esquerda: 36
        à direita: 31
    structure_if (74)
        à esquerda: 37
        à direita: 34
    structure_else (75)
        à esquerda: 38 39
        à direita: 34
    structure_switch (76)
        à esquerda: 40
        à direita: 35
    structure_cases (77)
        à esquerda: 41 42
        à direita: 40 41
    structure_case (78)
        à esquerda: 43 44
        à direita: 41
    structure_default (79)
        à esquerda: 45
        à direita: 40
    structure_while (80)
        à esquerda: 46
        à direita: 32
    structure_do (81)
        à esquerda: 47
        à direita: 33
    logical_expression <ival> (82)
        à esquerda: 48 49 50 51 52 53 54 55 56
        à direita: 37 46 47
    variable (83)
        à esquerda: 57 58 59
        à direita: 19 21 23 24 25 26 27
    expression <fval> (84)
        à esquerda: 60 61 62 63 64 65 66 67
        à direita: 48 49 50 51 52 53 54 55 56 58 61 62 63 64 65 66 67
    type <fval> (85)
        à esquerda: 68 69 70
        à direita: 36 43 60
    optional_params (86)
        à esquerda: 71 72 73
        à direita: 30


Estado 0

    0 $accept: . program $end
    1 $@1: . %empty
    2 program: . $@1 lines

    $padrão  reduzir usando a regra 1 ($@1)

    program  ir ao estado 1
    $@1      ir ao estado 2


Estado 1

    0 $accept: program . $end

    $end  deslocar, e ir ao estado 3


Estado 2

    2 program: $@1 . lines
    3 lines: . lines line
    4      | . %empty

    $padrão  reduzir usando a regra 4 (lines)

    lines  ir ao estado 4


Estado 3

    0 $accept: program $end .

    $padrão  aceitar


Estado 4

    2 program: $@1 lines .  [$end]
    3 lines: lines . line
    5 line: . T_EndLine
    6     | . variable_declaration T_DotComma
    7 $@2: . %empty  [T_Identificador]
    8 line: . $@2 attribution T_DotComma
    9 $@3: . %empty  [T_Identificador]
   10 line: . $@3 function_usage T_DotComma
   11 $@4: . %empty  [T_For, T_If, T_While, T_Switch, T_Do]
   12 line: . $@4 logical_structure
   13 $@5: . %empty  [T_Import]
   14 line: . $@5 import T_DotComma
   15 $@6: . %empty  [T_Comment]
   16 line: . $@6 T_Comment
   18 $@7: . %empty  [T_Let]
   19 variable_declaration: . $@7 T_Let T_Identificador T_Equals variable
   20 $@8: . %empty  [T_Const]
   21 variable_declaration: . $@8 T_Const T_Identificador T_Equals variable

    T_EndLine  deslocar, e ir ao estado 5

    $end             reduzir usando a regra 2 (program)
    T_Let            reduzir usando a regra 18 ($@7)
    T_Import         reduzir usando a regra 13 ($@5)
    T_Const          reduzir usando a regra 20 ($@8)
    T_Comment        reduzir usando a regra 15 ($@6)
    T_Identificador  reduzir usando a regra 7 ($@2)
    T_Identificador  [reduzir usando a regra 9 ($@3)]
    $padrão         reduzir usando a regra 11 ($@4)

    line                  ir ao estado 6
    $@2                   ir ao estado 7
    $@3                   ir ao estado 8
    $@4                   ir ao estado 9
    $@5                   ir ao estado 10
    $@6                   ir ao estado 11
    variable_declaration  ir ao estado 12
    $@7                   ir ao estado 13
    $@8                   ir ao estado 14


Estado 5

    5 line: T_EndLine .

    $padrão  reduzir usando a regra 5 (line)


Estado 6

    3 lines: lines line .

    $padrão  reduzir usando a regra 3 (lines)


Estado 7

    8 line: $@2 . attribution T_DotComma
   22 attribution: . T_Identificador attribution_right

    T_Identificador  deslocar, e ir ao estado 15

    attribution  ir ao estado 16


Estado 8

   10 line: $@3 . function_usage T_DotComma
   30 function_usage: . T_Identificador T_OpenParen optional_params T_CloseParen

    T_Identificador  deslocar, e ir ao estado 17

    function_usage  ir ao estado 18


Estado 9

   12 line: $@4 . logical_structure
   31 logical_structure: . structure_for
   32                  | . structure_while
   33                  | . structure_do T_DotComma
   34                  | . structure_if structure_else
   35                  | . structure_switch
   36 structure_for: . T_For T_OpenSquareBracket T_Identificador T_doubleDot T_OpenParen type T_Comma type T_Comma type T_CloseParen T_CloseSquareBracket T_OpenBracket lines T_CloseBracket
   37 structure_if: . T_If T_OpenSquareBracket logical_expression T_CloseSquareBracket T_OpenBracket lines T_CloseBracket
   40 structure_switch: . T_Switch T_OpenSquareBracket T_Identificador T_CloseSquareBracket T_OpenBracket structure_cases structure_default T_CloseBracket
   46 structure_while: . T_While T_OpenSquareBracket logical_expression T_CloseSquareBracket T_OpenBracket lines T_CloseBracket
   47 structure_do: . T_Do T_OpenBracket lines T_CloseBracket T_While T_OpenSquareBracket logical_expression T_CloseSquareBracket

    T_For     deslocar, e ir ao estado 19
    T_If      deslocar, e ir ao estado 20
    T_While   deslocar, e ir ao estado 21
    T_Switch  deslocar, e ir ao estado 22
    T_Do      deslocar, e ir ao estado 23

    logical_structure  ir ao estado 24
    structure_for      ir ao estado 25
    structure_if       ir ao estado 26
    structure_switch   ir ao estado 27
    structure_while    ir ao estado 28
    structure_do       ir ao estado 29


Estado 10

   14 line: $@5 . import T_DotComma
   17 import: . T_Import T_Identificador

    T_Import  deslocar, e ir ao estado 30

    import  ir ao estado 31


Estado 11

   16 line: $@6 . T_Comment

    T_Comment  deslocar, e ir ao estado 32


Estado 12

    6 line: variable_declaration . T_DotComma

    T_DotComma  deslocar, e ir ao estado 33


Estado 13

   19 variable_declaration: $@7 . T_Let T_Identificador T_Equals variable

    T_Let  deslocar, e ir ao estado 34


Estado 14

   21 variable_declaration: $@8 . T_Const T_Identificador T_Equals variable

    T_Const  deslocar, e ir ao estado 35


Estado 15

   22 attribution: T_Identificador . attribution_right
   23 attribution_right: . T_Equals variable
   24                  | . T_Plus T_Equals variable
   25                  | . T_Minus T_Equals variable
   26                  | . T_Divide T_Equals variable
   27                  | . T_Times T_Equals variable
   28                  | . T_Plus T_Plus
   29                  | . T_Minus T_Minus

    T_Equals  deslocar, e ir ao estado 36
    T_Minus   deslocar, e ir ao estado 37
    T_Plus    deslocar, e ir ao estado 38
    T_Divide  deslocar, e ir ao estado 39
    T_Times   deslocar, e ir ao estado 40

    attribution_right  ir ao estado 41


Estado 16

    8 line: $@2 attribution . T_DotComma

    T_DotComma  deslocar, e ir ao estado 42


Estado 17

   30 function_usage: T_Identificador . T_OpenParen optional_params T_CloseParen

    T_OpenParen  deslocar, e ir ao estado 43


Estado 18

   10 line: $@3 function_usage . T_DotComma

    T_DotComma  deslocar, e ir ao estado 44


Estado 19

   36 structure_for: T_For . T_OpenSquareBracket T_Identificador T_doubleDot T_OpenParen type T_Comma type T_Comma type T_CloseParen T_CloseSquareBracket T_OpenBracket lines T_CloseBracket

    T_OpenSquareBracket  deslocar, e ir ao estado 45


Estado 20

   37 structure_if: T_If . T_OpenSquareBracket logical_expression T_CloseSquareBracket T_OpenBracket lines T_CloseBracket

    T_OpenSquareBracket  deslocar, e ir ao estado 46


Estado 21

   46 structure_while: T_While . T_OpenSquareBracket logical_expression T_CloseSquareBracket T_OpenBracket lines T_CloseBracket

    T_OpenSquareBracket  deslocar, e ir ao estado 47


Estado 22

   40 structure_switch: T_Switch . T_OpenSquareBracket T_Identificador T_CloseSquareBracket T_OpenBracket structure_cases structure_default T_CloseBracket

    T_OpenSquareBracket  deslocar, e ir ao estado 48


Estado 23

   47 structure_do: T_Do . T_OpenBracket lines T_CloseBracket T_While T_OpenSquareBracket logical_expression T_CloseSquareBracket

    T_OpenBracket  deslocar, e ir ao estado 49


Estado 24

   12 line: $@4 logical_structure .

    $padrão  reduzir usando a regra 12 (line)


Estado 25

   31 logical_structure: structure_for .

    $padrão  reduzir usando a regra 31 (logical_structure)


Estado 26

   34 logical_structure: structure_if . structure_else
   38 structure_else: . T_Else T_OpenBracket lines T_CloseBracket
   39               | . %empty  [$end, T_Let, T_Import, T_CloseBracket, T_For, T_If, T_While, T_Switch, T_Case, T_Default, T_Do, T_Const, T_EndLine, T_Comment, T_Identificador]

    T_Else  deslocar, e ir ao estado 50

    $padrão  reduzir usando a regra 39 (structure_else)

    structure_else  ir ao estado 51


Estado 27

   35 logical_structure: structure_switch .

    $padrão  reduzir usando a regra 35 (logical_structure)


Estado 28

   32 logical_structure: structure_while .

    $padrão  reduzir usando a regra 32 (logical_structure)


Estado 29

   33 logical_structure: structure_do . T_DotComma

    T_DotComma  deslocar, e ir ao estado 52


Estado 30

   17 import: T_Import . T_Identificador

    T_Identificador  deslocar, e ir ao estado 53


Estado 31

   14 line: $@5 import . T_DotComma

    T_DotComma  deslocar, e ir ao estado 54


Estado 32

   16 line: $@6 T_Comment .

    $padrão  reduzir usando a regra 16 (line)


Estado 33

    6 line: variable_declaration T_DotComma .

    $padrão  reduzir usando a regra 6 (line)


Estado 34

   19 variable_declaration: $@7 T_Let . T_Identificador T_Equals variable

    T_Identificador  deslocar, e ir ao estado 55


Estado 35

   21 variable_declaration: $@8 T_Const . T_Identificador T_Equals variable

    T_Identificador  deslocar, e ir ao estado 56


Estado 36

   23 attribution_right: T_Equals . variable
   30 function_usage: . T_Identificador T_OpenParen optional_params T_CloseParen
   57 variable: . T_String
   58         | . expression
   59         | . function_usage
   60 expression: . type
   61           | . expression T_Plus expression
   62           | . expression T_Minus expression
   63           | . expression T_Times expression
   64           | . expression T_Divide expression
   65           | . T_Minus expression
   66           | . expression T_Power expression
   67           | . T_OpenParen expression T_CloseParen
   68 type: . T_IntValue
   69     | . T_FloatValue
   70     | . T_Identificador

    T_OpenParen      deslocar, e ir ao estado 57
    T_IntValue       deslocar, e ir ao estado 58
    T_FloatValue     deslocar, e ir ao estado 59
    T_String         deslocar, e ir ao estado 60
    T_Identificador  deslocar, e ir ao estado 61
    T_Minus          deslocar, e ir ao estado 62

    function_usage  ir ao estado 63
    variable        ir ao estado 64
    expression      ir ao estado 65
    type            ir ao estado 66


Estado 37

   25 attribution_right: T_Minus . T_Equals variable
   29                  | T_Minus . T_Minus

    T_Equals  deslocar, e ir ao estado 67
    T_Minus   deslocar, e ir ao estado 68


Estado 38

   24 attribution_right: T_Plus . T_Equals variable
   28                  | T_Plus . T_Plus

    T_Equals  deslocar, e ir ao estado 69
    T_Plus    deslocar, e ir ao estado 70


Estado 39

   26 attribution_right: T_Divide . T_Equals variable

    T_Equals  deslocar, e ir ao estado 71


Estado 40

   27 attribution_right: T_Times . T_Equals variable

    T_Equals  deslocar, e ir ao estado 72


Estado 41

   22 attribution: T_Identificador attribution_right .

    $padrão  reduzir usando a regra 22 (attribution)


Estado 42

    8 line: $@2 attribution T_DotComma .

    $padrão  reduzir usando a regra 8 (line)


Estado 43

   30 function_usage: T_Identificador T_OpenParen . optional_params T_CloseParen
   71 optional_params: . T_String
   72                | . T_Identificador
   73                | . %empty  [T_CloseParen]

    T_String         deslocar, e ir ao estado 73
    T_Identificador  deslocar, e ir ao estado 74

    $padrão  reduzir usando a regra 73 (optional_params)

    optional_params  ir ao estado 75


Estado 44

   10 line: $@3 function_usage T_DotComma .

    $padrão  reduzir usando a regra 10 (line)


Estado 45

   36 structure_for: T_For T_OpenSquareBracket . T_Identificador T_doubleDot T_OpenParen type T_Comma type T_Comma type T_CloseParen T_CloseSquareBracket T_OpenBracket lines T_CloseBracket

    T_Identificador  deslocar, e ir ao estado 76


Estado 46

   37 structure_if: T_If T_OpenSquareBracket . logical_expression T_CloseSquareBracket T_OpenBracket lines T_CloseBracket
   48 logical_expression: . expression T_EqualsEQ expression
   49                   | . expression T_NegativeEquals expression
   50                   | . expression T_BiggerThan expression
   51                   | . expression T_SmallerThan expression
   52                   | . expression T_BiggerThanEQ expression
   53                   | . expression T_SmallerThanEQ expression
   54                   | . expression T_Or expression
   55                   | . expression T_And expression
   56                   | . T_Not expression
   60 expression: . type
   61           | . expression T_Plus expression
   62           | . expression T_Minus expression
   63           | . expression T_Times expression
   64           | . expression T_Divide expression
   65           | . T_Minus expression
   66           | . expression T_Power expression
   67           | . T_OpenParen expression T_CloseParen
   68 type: . T_IntValue
   69     | . T_FloatValue
   70     | . T_Identificador

    T_OpenParen      deslocar, e ir ao estado 57
    T_Not            deslocar, e ir ao estado 77
    T_IntValue       deslocar, e ir ao estado 58
    T_FloatValue     deslocar, e ir ao estado 59
    T_Identificador  deslocar, e ir ao estado 78
    T_Minus          deslocar, e ir ao estado 62

    logical_expression  ir ao estado 79
    expression          ir ao estado 80
    type                ir ao estado 66


Estado 47

   46 structure_while: T_While T_OpenSquareBracket . logical_expression T_CloseSquareBracket T_OpenBracket lines T_CloseBracket
   48 logical_expression: . expression T_EqualsEQ expression
   49                   | . expression T_NegativeEquals expression
   50                   | . expression T_BiggerThan expression
   51                   | . expression T_SmallerThan expression
   52                   | . expression T_BiggerThanEQ expression
   53                   | . expression T_SmallerThanEQ expression
   54                   | . expression T_Or expression
   55                   | . expression T_And expression
   56                   | . T_Not expression
   60 expression: . type
   61           | . expression T_Plus expression
   62           | . expression T_Minus expression
   63           | . expression T_Times expression
   64           | . expression T_Divide expression
   65           | . T_Minus expression
   66           | . expression T_Power expression
   67           | . T_OpenParen expression T_CloseParen
   68 type: . T_IntValue
   69     | . T_FloatValue
   70     | . T_Identificador

    T_OpenParen      deslocar, e ir ao estado 57
    T_Not            deslocar, e ir ao estado 77
    T_IntValue       deslocar, e ir ao estado 58
    T_FloatValue     deslocar, e ir ao estado 59
    T_Identificador  deslocar, e ir ao estado 78
    T_Minus          deslocar, e ir ao estado 62

    logical_expression  ir ao estado 81
    expression          ir ao estado 80
    type                ir ao estado 66


Estado 48

   40 structure_switch: T_Switch T_OpenSquareBracket . T_Identificador T_CloseSquareBracket T_OpenBracket structure_cases structure_default T_CloseBracket

    T_Identificador  deslocar, e ir ao estado 82


Estado 49

    3 lines: . lines line
    4      | . %empty
   47 structure_do: T_Do T_OpenBracket . lines T_CloseBracket T_While T_OpenSquareBracket logical_expression T_CloseSquareBracket

    $padrão  reduzir usando a regra 4 (lines)

    lines  ir ao estado 83


Estado 50

   38 structure_else: T_Else . T_OpenBracket lines T_CloseBracket

    T_OpenBracket  deslocar, e ir ao estado 84


Estado 51

   34 logical_structure: structure_if structure_else .

    $padrão  reduzir usando a regra 34 (logical_structure)


Estado 52

   33 logical_structure: structure_do T_DotComma .

    $padrão  reduzir usando a regra 33 (logical_structure)


Estado 53

   17 import: T_Import T_Identificador .

    $padrão  reduzir usando a regra 17 (import)


Estado 54

   14 line: $@5 import T_DotComma .

    $padrão  reduzir usando a regra 14 (line)


Estado 55

   19 variable_declaration: $@7 T_Let T_Identificador . T_Equals variable

    T_Equals  deslocar, e ir ao estado 85


Estado 56

   21 variable_declaration: $@8 T_Const T_Identificador . T_Equals variable

    T_Equals  deslocar, e ir ao estado 86


Estado 57

   60 expression: . type
   61           | . expression T_Plus expression
   62           | . expression T_Minus expression
   63           | . expression T_Times expression
   64           | . expression T_Divide expression
   65           | . T_Minus expression
   66           | . expression T_Power expression
   67           | . T_OpenParen expression T_CloseParen
   67           | T_OpenParen . expression T_CloseParen
   68 type: . T_IntValue
   69     | . T_FloatValue
   70     | . T_Identificador

    T_OpenParen      deslocar, e ir ao estado 57
    T_IntValue       deslocar, e ir ao estado 58
    T_FloatValue     deslocar, e ir ao estado 59
    T_Identificador  deslocar, e ir ao estado 78
    T_Minus          deslocar, e ir ao estado 62

    expression  ir ao estado 87
    type        ir ao estado 66


Estado 58

   68 type: T_IntValue .

    $padrão  reduzir usando a regra 68 (type)


Estado 59

   69 type: T_FloatValue .

    $padrão  reduzir usando a regra 69 (type)


Estado 60

   57 variable: T_String .

    $padrão  reduzir usando a regra 57 (variable)


Estado 61

   30 function_usage: T_Identificador . T_OpenParen optional_params T_CloseParen
   70 type: T_Identificador .  [T_DotComma, T_Minus, T_Plus, T_Divide, T_Times, T_Power]

    T_OpenParen  deslocar, e ir ao estado 43

    $padrão  reduzir usando a regra 70 (type)


Estado 62

   60 expression: . type
   61           | . expression T_Plus expression
   62           | . expression T_Minus expression
   63           | . expression T_Times expression
   64           | . expression T_Divide expression
   65           | . T_Minus expression
   65           | T_Minus . expression
   66           | . expression T_Power expression
   67           | . T_OpenParen expression T_CloseParen
   68 type: . T_IntValue
   69     | . T_FloatValue
   70     | . T_Identificador

    T_OpenParen      deslocar, e ir ao estado 57
    T_IntValue       deslocar, e ir ao estado 58
    T_FloatValue     deslocar, e ir ao estado 59
    T_Identificador  deslocar, e ir ao estado 78
    T_Minus          deslocar, e ir ao estado 62

    expression  ir ao estado 88
    type        ir ao estado 66


Estado 63

   59 variable: function_usage .

    $padrão  reduzir usando a regra 59 (variable)


Estado 64

   23 attribution_right: T_Equals variable .

    $padrão  reduzir usando a regra 23 (attribution_right)


Estado 65

   58 variable: expression .  [T_DotComma]
   61 expression: expression . T_Plus expression
   62           | expression . T_Minus expression
   63           | expression . T_Times expression
   64           | expression . T_Divide expression
   66           | expression . T_Power expression

    T_Minus   deslocar, e ir ao estado 89
    T_Plus    deslocar, e ir ao estado 90
    T_Divide  deslocar, e ir ao estado 91
    T_Times   deslocar, e ir ao estado 92
    T_Power   deslocar, e ir ao estado 93

    $padrão  reduzir usando a regra 58 (variable)


Estado 66

   60 expression: type .

    $padrão  reduzir usando a regra 60 (expression)


Estado 67

   25 attribution_right: T_Minus T_Equals . variable
   30 function_usage: . T_Identificador T_OpenParen optional_params T_CloseParen
   57 variable: . T_String
   58         | . expression
   59         | . function_usage
   60 expression: . type
   61           | . expression T_Plus expression
   62           | . expression T_Minus expression
   63           | . expression T_Times expression
   64           | . expression T_Divide expression
   65           | . T_Minus expression
   66           | . expression T_Power expression
   67           | . T_OpenParen expression T_CloseParen
   68 type: . T_IntValue
   69     | . T_FloatValue
   70     | . T_Identificador

    T_OpenParen      deslocar, e ir ao estado 57
    T_IntValue       deslocar, e ir ao estado 58
    T_FloatValue     deslocar, e ir ao estado 59
    T_String         deslocar, e ir ao estado 60
    T_Identificador  deslocar, e ir ao estado 61
    T_Minus          deslocar, e ir ao estado 62

    function_usage  ir ao estado 63
    variable        ir ao estado 94
    expression      ir ao estado 65
    type            ir ao estado 66


Estado 68

   29 attribution_right: T_Minus T_Minus .

    $padrão  reduzir usando a regra 29 (attribution_right)


Estado 69

   24 attribution_right: T_Plus T_Equals . variable
   30 function_usage: . T_Identificador T_OpenParen optional_params T_CloseParen
   57 variable: . T_String
   58         | . expression
   59         | . function_usage
   60 expression: . type
   61           | . expression T_Plus expression
   62           | . expression T_Minus expression
   63           | . expression T_Times expression
   64           | . expression T_Divide expression
   65           | . T_Minus expression
   66           | . expression T_Power expression
   67           | . T_OpenParen expression T_CloseParen
   68 type: . T_IntValue
   69     | . T_FloatValue
   70     | . T_Identificador

    T_OpenParen      deslocar, e ir ao estado 57
    T_IntValue       deslocar, e ir ao estado 58
    T_FloatValue     deslocar, e ir ao estado 59
    T_String         deslocar, e ir ao estado 60
    T_Identificador  deslocar, e ir ao estado 61
    T_Minus          deslocar, e ir ao estado 62

    function_usage  ir ao estado 63
    variable        ir ao estado 95
    expression      ir ao estado 65
    type            ir ao estado 66


Estado 70

   28 attribution_right: T_Plus T_Plus .

    $padrão  reduzir usando a regra 28 (attribution_right)


Estado 71

   26 attribution_right: T_Divide T_Equals . variable
   30 function_usage: . T_Identificador T_OpenParen optional_params T_CloseParen
   57 variable: . T_String
   58         | . expression
   59         | . function_usage
   60 expression: . type
   61           | . expression T_Plus expression
   62           | . expression T_Minus expression
   63           | . expression T_Times expression
   64           | . expression T_Divide expression
   65           | . T_Minus expression
   66           | . expression T_Power expression
   67           | . T_OpenParen expression T_CloseParen
   68 type: . T_IntValue
   69     | . T_FloatValue
   70     | . T_Identificador

    T_OpenParen      deslocar, e ir ao estado 57
    T_IntValue       deslocar, e ir ao estado 58
    T_FloatValue     deslocar, e ir ao estado 59
    T_String         deslocar, e ir ao estado 60
    T_Identificador  deslocar, e ir ao estado 61
    T_Minus          deslocar, e ir ao estado 62

    function_usage  ir ao estado 63
    variable        ir ao estado 96
    expression      ir ao estado 65
    type            ir ao estado 66


Estado 72

   27 attribution_right: T_Times T_Equals . variable
   30 function_usage: . T_Identificador T_OpenParen optional_params T_CloseParen
   57 variable: . T_String
   58         | . expression
   59         | . function_usage
   60 expression: . type
   61           | . expression T_Plus expression
   62           | . expression T_Minus expression
   63           | . expression T_Times expression
   64           | . expression T_Divide expression
   65           | . T_Minus expression
   66           | . expression T_Power expression
   67           | . T_OpenParen expression T_CloseParen
   68 type: . T_IntValue
   69     | . T_FloatValue
   70     | . T_Identificador

    T_OpenParen      deslocar, e ir ao estado 57
    T_IntValue       deslocar, e ir ao estado 58
    T_FloatValue     deslocar, e ir ao estado 59
    T_String         deslocar, e ir ao estado 60
    T_Identificador  deslocar, e ir ao estado 61
    T_Minus          deslocar, e ir ao estado 62

    function_usage  ir ao estado 63
    variable        ir ao estado 97
    expression      ir ao estado 65
    type            ir ao estado 66


Estado 73

   71 optional_params: T_String .

    $padrão  reduzir usando a regra 71 (optional_params)


Estado 74

   72 optional_params: T_Identificador .

    $padrão  reduzir usando a regra 72 (optional_params)


Estado 75

   30 function_usage: T_Identificador T_OpenParen optional_params . T_CloseParen

    T_CloseParen  deslocar, e ir ao estado 98


Estado 76

   36 structure_for: T_For T_OpenSquareBracket T_Identificador . T_doubleDot T_OpenParen type T_Comma type T_Comma type T_CloseParen T_CloseSquareBracket T_OpenBracket lines T_CloseBracket

    T_doubleDot  deslocar, e ir ao estado 99


Estado 77

   56 logical_expression: T_Not . expression
   60 expression: . type
   61           | . expression T_Plus expression
   62           | . expression T_Minus expression
   63           | . expression T_Times expression
   64           | . expression T_Divide expression
   65           | . T_Minus expression
   66           | . expression T_Power expression
   67           | . T_OpenParen expression T_CloseParen
   68 type: . T_IntValue
   69     | . T_FloatValue
   70     | . T_Identificador

    T_OpenParen      deslocar, e ir ao estado 57
    T_IntValue       deslocar, e ir ao estado 58
    T_FloatValue     deslocar, e ir ao estado 59
    T_Identificador  deslocar, e ir ao estado 78
    T_Minus          deslocar, e ir ao estado 62

    expression  ir ao estado 100
    type        ir ao estado 66


Estado 78

   70 type: T_Identificador .

    $padrão  reduzir usando a regra 70 (type)


Estado 79

   37 structure_if: T_If T_OpenSquareBracket logical_expression . T_CloseSquareBracket T_OpenBracket lines T_CloseBracket

    T_CloseSquareBracket  deslocar, e ir ao estado 101


Estado 80

   48 logical_expression: expression . T_EqualsEQ expression
   49                   | expression . T_NegativeEquals expression
   50                   | expression . T_BiggerThan expression
   51                   | expression . T_SmallerThan expression
   52                   | expression . T_BiggerThanEQ expression
   53                   | expression . T_SmallerThanEQ expression
   54                   | expression . T_Or expression
   55                   | expression . T_And expression
   61 expression: expression . T_Plus expression
   62           | expression . T_Minus expression
   63           | expression . T_Times expression
   64           | expression . T_Divide expression
   66           | expression . T_Power expression

    T_EqualsEQ        deslocar, e ir ao estado 102
    T_NegativeEquals  deslocar, e ir ao estado 103
    T_Or              deslocar, e ir ao estado 104
    T_And             deslocar, e ir ao estado 105
    T_SmallerThan     deslocar, e ir ao estado 106
    T_SmallerThanEQ   deslocar, e ir ao estado 107
    T_BiggerThan      deslocar, e ir ao estado 108
    T_BiggerThanEQ    deslocar, e ir ao estado 109
    T_Minus           deslocar, e ir ao estado 89
    T_Plus            deslocar, e ir ao estado 90
    T_Divide          deslocar, e ir ao estado 91
    T_Times           deslocar, e ir ao estado 92
    T_Power           deslocar, e ir ao estado 93


Estado 81

   46 structure_while: T_While T_OpenSquareBracket logical_expression . T_CloseSquareBracket T_OpenBracket lines T_CloseBracket

    T_CloseSquareBracket  deslocar, e ir ao estado 110


Estado 82
